[project]
name = "devbrain"
version = "0.1.0"
description = "Multi-source developer support intelligence platform powered by Advanced RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- LLM & Embeddings ---
    "openai>=1.35.0",           # OpenAI API client (embeddings + LLM)
    "tiktoken>=0.7.0",          # Token counting (needed for chunk size estimation)

    # --- LangChain (orchestration) ---
    "langchain>=0.3.0",         # Core framework for chains and retrievers
    "langchain-openai>=0.2.0",  # LangChain <-> OpenAI integration
    "langchain-text-splitters>=0.3.0",  # Text chunking utilities

    # --- Vector Database ---
    "pinecone>=5.0.0",   # Pinecone vector database client

    # --- Data & Utilities ---
    "python-dotenv>=1.0.0",     # Load .env files
    "httpx>=0.27.0",            # Async HTTP client (GitHub API calls)
    "rich>=13.0.0",             # Beautiful terminal output (progress bars, tables)
    "numpy>=1.26.0",            # Array math (cosine similarity in self-tests)

    # --- Advanced Retrieval (Phase 3) ---
    "rank-bm25>=0.2.2",         # BM25 sparse retrieval (keyword matching)
    "cohere>=5.0.0",            # Cohere Rerank API (cross-encoder reranking)

    # --- Agentic RAG (Phase 4) ---
    "langgraph>=0.2.0",         # State machine framework for LLM agents
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]